<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dota2background">


    <ImageView
        android:id="@+id/hero_avatar_image"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:src="@drawable/ic_launcher_background"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/hero_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:fontFamily="@font/font_text"
        android:text="@string/hero_name_text"
        android:textColor="@color/grey"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/hero_avatar_image" />

    <GridLayout
        android:id="@+id/grid_hero_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:columnCount="2"
        android:orientation="vertical"
        android:rowCount="5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/hero_name">

        <TextView
            android:id="@+id/health_hero_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/health_text"
            android:textColor="@color/grey"
            android:textSize="20sp"
            android:textStyle="italic" />

        <TextView
            android:id="@+id/mana_hero_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/mana_text"
            android:textColor="@color/grey"
            android:textSize="20sp"
            android:textStyle="italic" />

        <TextView
            android:id="@+id/primary_attribute_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/primary_attribute_text"
            android:textColor="@color/grey"
            android:textSize="20sp"
            android:textStyle="italic" />

        <TextView
            android:id="@+id/attack_type_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/attack_type_text"
            android:textColor="@color/grey"
            android:textSize="20sp"
            android:textStyle="italic" />

        <TextView
            android:id="@+id/move_speed_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/move_speed"
            android:textColor="@color/grey"
            android:textSize="20sp"
            android:textStyle="italic" />

        <TextView

            android:id="@+id/health_hero_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/info_health_text"
            android:textColor="@color/grey"
            android:textSize="20sp"
            android:textStyle="italic" />

        <TextView
            android:id="@+id/mana_hero_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/info_mana_text"
            android:textColor="@color/grey"
            android:textSize="20sp"
            android:textStyle="italic" />

        <TextView
            android:id="@+id/primary_attribute_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/primary_attribute_info_text"
            android:textColor="@color/grey"
            android:textSize="20sp"
            android:textStyle="italic"
            app:layout_constraintStart_toEndOf="@id/hero_name" />

        <TextView
            android:id="@+id/attack_type_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/info_attack_type_text"
            android:textColor="@color/grey"
            android:textSize="20sp"
            android:textStyle="italic" />

        <TextView
            android:id="@+id/move_speed_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/move_speed_info_text"
            android:textColor="@color/grey"
            android:textSize="20sp"
            android:textStyle="italic" />

    </GridLayout>

</androidx.constraintlayout.widget.ConstraintLayout>