<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dota2background"
    android:orientation="vertical"
    tools:context=".ui.aboutApp.AboutFragment">

    <TextView
        android:id="@+id/nickname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/name_dev"
        android:textColor="@color/grey"
        android:textSize="32sp" />

    <TextView
        android:id="@+id/link_tg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:autoLink="web"
        android:text="@string/tg_link"
        android:textSize="32sp" />

    <TextView
        android:id="@+id/date_of_create"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/data_of_create"
        android:textColor="@color/grey"
        android:textSize="32sp" />

</LinearLayout>